added dania change

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 <script>
     //test
     function runner () {};
+    //dania 
+    const array = ["dania", "saleh", "nibras","omar","mohammad","ahmad","saly","sara","hamza","yishai"];
+
 </script>
 </html>
