--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 <script>
     //test
     function runner () {};
+    //omar 
+    const newarr = array[Math.floor(Math.random() * array.length)];
+
+
 </script>
 </html>
