--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </body>
 <script>
     //test
+    //nibras
+
+    function logWinners(winners){
+        console.log("Congrats! "+winners[0].name+" is first Place with the time of "+winners[0].time+ ", "+winners[1].name+ " is second Place with the time of "+winners[1].time+", "+winners[2].name+" is third Place with the time of "+winners[2].time);
+    }
+
     function runner () {};
 </script>
 </html>
