--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     //test
     function runner () {};
     //dania 
-    const array = ["dania", "saleh", "nibras","omar","mohammad","ahmad","saly","sara","hamza","yishai"];
+     function startRace(){
+        const array = ["dania", "saleh", "nibras","omar","mohammad","ahmad","saly","sara","hamza","yishai"];
+     }
+
+    
 
 </script>
 </html>
