--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
-<script>
+  </head>
+  <body></body>
+  <script>
     //test
-    function runner () {};
-</script>
+    function runner() {}
+
+    // saleh
+    function placeRunners(arr) {
+      const timeArray = [];
+      const nameArray = arr;
+      for (let i in arr) {
+        let time = Math.floor(Math.random() * 10) + 1;
+        timeArray.push(time);
+      }
+      timeArray.sort(function (a, b) {
+        return a - b;
+      });
+      logWinners(nameArray, timeArray);
+    }
+  </script>
 </html>
