--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     //test
     //nibras
 
-    function logWinners(winners){
-        console.log("Congrats! "+winners[0].name+" is first Place with the time of "+winners[0].time+ ", "+winners[1].name+ " is second Place with the time of "+winners[1].time+", "+winners[2].name+" is third Place with the time of "+winners[2].time);
+    function logWinners(nameArray,timeArray ){
+        console.log("Congrats! "+nameArray[0]+" is first Place with the time of "+timeArray[0]+ ", "+nameArray[1]+ " is second Place with the time of "+timeArray[1]+", "+nameArray[2]+" is third Place with the time of "+timeArray[2]);
     }
 
     function runner () {};
