--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       const timeArray = [];
       const nameArray = arr;
       for (let i in arr) {
-        let time = Math.floor(Math.random() * 10) + 1;
+        const time = Math.floor(Math.random() * 10) + 1;
         timeArray.push(time);
       }
       timeArray.sort(function (a, b) {
