--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     
 </body>
 <script>
-    //test
+    //test(
     function runner () {};
     //omar 
-    const newarr = array[Math.floor(Math.random() * array.length)];
+    function pickRunner(array) {
+            const newarr = array[Math.floor(Math.random() * array.length)];
+        placeRunners(newarr);
+
+
+    }
 
 
 </script>
