--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     //dania 
      function startRace(){
         const array = ["dania", "saleh", "nibras","omar","mohammad","ahmad","saly","sara","hamza","yishai"];
+        pickRunner(array);
      }
 
     
