--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     //test
     function runner() {}
 
+    // input -> output
+    // ["saleh", "kalouti", "omar"] -> ["saleh", "kalouti", "omar"] , [1, 2, 3]
+    const arr = ["saleh", "omar", "nibras"];
+    console.log(placeRunners(arr));
     // saleh
     function placeRunners(arr) {
       const timeArray = [];
