--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     // input -> output
     // ["saleh", "kalouti", "omar"] -> ["saleh", "kalouti", "omar"] , [1, 2, 3]
-    const arr = ["saleh", "omar", "nibras"];
-    console.log(placeRunners(arr));
+    // const arr = ["saleh", "omar", "nibras"];
+    // console.log(placeRunners(arr));
     // saleh
     function placeRunners(arr) {
       const timeArray = [];
