--- a/index.html
+++ b/index.html
@@ -8,22 +8,48 @@
   </head>
   <body></body>
 
-<script>
+  <script>
+    //dania
+    function startRace() {
+      const array = [
+        "dania",
+        "saleh",
+        "nibras",
+        "omar",
+        "mohammad",
+        "ahmad",
+        "saly",
+        "sara",
+        "hamza",
+        "yishai",
+      ];
+      pickRunner(array);
+    }
 
-    //dania 
-     function startRace(){
-        const array = ["dania", "saleh", "nibras","omar","mohammad","ahmad","saly","sara","hamza","yishai"];
-        pickRunner(array);
-     }
-
-    //omar 
+    //omar
     function pickRunner(array) {
-            const newarr = array[Math.floor(Math.random() * array.length)];
-            placeRunners(newarr);
+      let newarr = [];
+      for (let i = 0; i < 3; i++) {
+        newarr.push(array[Math.floor(Math.random() * array.length)]);
+      }
+      placeRunners(newarr);
     }
     //nibras
-        function logWinners(nameArray,timeArray ){
-        console.log("Congrats! "+nameArray[0]+" is first Place with the time of "+timeArray[0]+ ", "+nameArray[1]+ " is second Place with the time of "+timeArray[1]+", "+nameArray[2]+" is third Place with the time of "+timeArray[2]);
+    function logWinners(nameArray, timeArray) {
+      console.log(
+        "Congrats! " +
+          nameArray[0] +
+          " is first Place with the time of " +
+          timeArray[0] +
+          ", " +
+          nameArray[1] +
+          " is second Place with the time of " +
+          timeArray[1] +
+          ", " +
+          nameArray[2] +
+          " is third Place with the time of " +
+          timeArray[2]
+      );
     }
     // saleh
     function placeRunners(arr) {
@@ -38,5 +64,6 @@
       });
       logWinners(nameArray, timeArray);
     }
-</script>
+    startRace();
+  </script>
 </html>
